Https request in 'Inicio' page resolved.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=false&&react-scripts start",
+    "httpstart": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
