--- a/package.json
+++ b/package.json
@@ -2,9 +2,19 @@
   "name": "especializacao-website",
   "version": "0.1.0",
   "private": true,
+  "devDependencies": {
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^24.9.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.13.1",
+    "ts-jest": "^23.10.5"
+  },
   "dependencies": {
     "@react-pdf/renderer": "^1.6.10",
-    "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.38",
     "@types/react-dom": "^16.9.8",
@@ -14,6 +24,7 @@
     "react-dom": "^16.13.1",
     "react-google-charts": "^3.0.15",
     "react-icons": "^3.10.0",
+    "react-input-range": "^1.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "semantic-ui-css": "^2.4.1",
@@ -21,10 +32,12 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
+    "typecheck": "tsc",
     "start": "set HTTPS=false&&react-scripts start",
     "httpstart": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "jest_init": "jest --init",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
