--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es2017"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,5 +22,8 @@
   },
   "include": [
     "src"
+  ],
+  "exclue": [
+    "node_modules"
   ]
 }
